--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Modified according to specific style guidelines
 
 /* Document
    ========================================================================== */
@@ -17,11 +18,13 @@ html {
    ========================================================================== */
 
 /**
- * Remove the margin in all browsers.
+ * 1. Remove the margin in all browsers.
+ * 2. Change the background to fit app theme
  */
 
 body {
   margin: 0;
+  background-color: #eff5ff;
 }
 
 /**
