adds error handling for forms

--- a/src/styles/PersonalInfo.css
+++ b/src/styles/PersonalInfo.css
@@ -8,3 +8,19 @@
 .pi-description {
   color: #9699aa;
 }
+
+.pi-footer {
+  background: #ffffff;
+  box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.0951141);
+  margin-top: auto;
+  display: flex;
+  padding: 1em;
+  justify-content: flex-end;
+}
+
+.next-button {
+  background: #022959;
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 1em;
+}
