--- a/src/styles/FormInput.css
+++ b/src/styles/FormInput.css
@@ -2,15 +2,24 @@
   display: flex;
   flex-direction: column;
   color: #022959;
-  font-size: 0.8em;
+  font-size: 0.75em;
 }
 
 .form-input {
   border: 1px solid #d6d9e6;
-  border-radius: 4px;
+  border-radius: 0.25em;
   margin: 0.2em 0 1em 0;
   font-size: 1.2em;
-  padding: 0.5em;
+  padding: 1em;
+}
+
+.form-input::placeholder {
+  font-family: "Ubuntu";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 17px;
+  color: #9699aa;
 }
 
 .error-border {
