--- a/src/styles/InfoDisplayLayout.css
+++ b/src/styles/InfoDisplayLayout.css
@@ -3,4 +3,6 @@
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.0951141);
   border-radius: 10px;
   padding: 1em;
+  width: 85%;
+  margin: 0 auto;
 }
