--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,3 +8,9 @@
   position: absolute;
   z-index: -1;
 }
+
+@media only screen and (min-width: 1440px) {
+  .app-section {
+    justify-content: center;
+  }
+}
