--- a/src/styles/InfoDisplayLayout.css
+++ b/src/styles/InfoDisplayLayout.css
@@ -6,3 +6,10 @@
   width: 85%;
   margin: 0 auto;
 }
+
+@media only screen and (min-width: 1440px) {
+  .info-display-container {
+    display: flex;
+    max-width: 70%;
+  }
+}
