--- a/src/styles/PersonalInfo.css
+++ b/src/styles/PersonalInfo.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin: 0 auto;
 }
+
 .pi-title {
   font-weight: 700;
   line-height: 1.75em;
@@ -43,9 +44,39 @@
 @media only screen and (min-width: 1440px) {
   .pi-section {
     flex-direction: row;
+    width: 75%;
   }
 
   .std-section {
     flex-direction: column;
+  }
+
+  .pi-title {
+    font-size: 2em;
+  }
+
+  .pi-pane {
+    padding: 1em 5em;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .form-label {
+    font-size: 1em;
+  }
+
+  .form-input {
+    margin: 0.5em 0 1.5em 0;
+    padding: 0.875em;
+  }
+
+  .pi-footer {
+    padding: 1em 0;
+  }
+
+  .next-button {
+    height: 100%;
+    padding: 1.25em;
   }
 }
