--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,5 +12,7 @@
 @media only screen and (min-width: 1440px) {
   .app-section {
     justify-content: center;
+    width: 90%;
+    margin: auto;
   }
 }
